crates/plotnik-lib/tests/05-typegen/definitions/error_captured_ref_in_recursive_cycle.txt
A = {(expression_statement) (statement_block (B))?}
B = {(debugger_statement) (statement_block (A) @x)? @s}
------------------ DIAGNOSTICS -------------------
error: the referenced definition produces no value; add a capture inside it or capture a node pattern directly
 --> query.ptk:2:44
  |
1 | A = {(expression_statement) (statement_block (B))?}
  |     ----------------------------------------------- defined here
2 | B = {(debugger_statement) (statement_block (A) @x)? @s}
  |                                            ^^^
